feature: Move control over providers onto FE + handle each provider differently + change method to retrieve location key - now it will be stored in localStorage as well
